GER: Some Polish

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -46,7 +46,7 @@ GER_doctrine_fleet_in_beeing3_desc:0 "-"
 GER_doctrine_base_strike:0 "Listen to Patzig and Raeder"
 GER_doctrine_base_strike_desc:0 "Patzig and Raeder have, in close communication with Sperrle of the Luftwaffe, devised a type of naval strategy reliant on mobile air-bases through Aircraft carriers. These men are convinced that on the open sea, where there help can take days to arrive, ships can only be risked if they fight together as one group, called Operative Manövergruppen."
 GER_doctrine_base_strike2:0 "Naval Air Force Research"
-GER_doctrine_base_strike2_desc:0 "
+GER_doctrine_base_strike2_desc:0 ""
 GER_doctrine_base_strike3:0 "Extend Carrier Research"
 GER_doctrine_base_strike3_desc:0 "-"
 GER_doctrine_fleet1:0 "Modernise our Cruisers"
@@ -135,9 +135,9 @@ GER_artillery_research:0 "Artillery research"
 GER_artillery_research_desc:0 "-"
 GER_doctrine_armor:0 "Armoured breakthrough"
 GER_doctrine_armor_desc:0 "-"
-GER_hahn_meitner:0 "Hahn & Meitner"
+GER_hahn_meitner:0 "Support Hahn & Meitner"
 GER_hahn_meitner_desc:0 "Herr Hahn and Fräulein Meitner are both extremely talented physicists, Hahn discovered nuclear isomerism and Meitner is a department head at the Kaiser Wilhelm Institute! Together we believe the two can help create extremely powerful tools for society. And even more powerful weapons."
-GER_zuse:0 "Konrad Zuse"
+GER_zuse:0 "Support Konrad Zuse"
 GER_zuse_desc:0 "Konrad Zuse has already handed in several patents for what he calls a 'computing devices'. With proper sponsorship, his mind could be put to good use by the state, for the state."
 GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
 GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
