--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -633,7 +633,7 @@ annex.161.a:0 "Liberate a loyal Belgium"
 annex.161.b:0 "Liberate Flanders and Wallonia"
 annex.161.c:0 "Liberate Flanders"
 annex.162.t:0 "Southern Wallonia"
-annex.162.d:0 "TODO"
+annex.162.d:0 "We now control the southern half of Wallonia that was once occupied by the German army following the Weltkrieg, we must choose what to do with our new piece of Belgium."
 annex.162.a:0 "Liberate Wallonia"
 annex.162.b:0 "Liberate Belgium"
 annex.162.c:0 "Return Southern Wallonia to Belgium"
@@ -650,6 +650,47 @@ annex.165.d:0 "After our occupation of the area around Thessaloniki we were left
 annex.165.a:0 "Transfer the territory to Bulgaria"
 annex.165.b:0 "Transfer the territory to Greece"
 annex.165.c:0 "Release an independent Greece"
+annex.166.t:0 "Fate of Algeria"
+annex.166.d:0 "We finally freed Algeria from the French tyrants in Algiers, should we give the Algerians freedom?" 
+annex.166.a:0 "Occupy them"
+annex.166.b:0 "Liberate a loyal Algeria"
+annex.167.t:0 "Fate of Morocco"
+annex.167.d:0 "We have freed Morocco from the Germans and our forces are now have difficulties occupying the mountainous and semi-arid regions of the country. The urban centres are in control but it would maybe be wise to hand out further control to locals." 
+annex.167.a:0 "Liberate a loyal Morocco"
+annex.168.t:0 "Fate of Don Kuban Union"
+annex.168.d:0 "After a short campaign across the Kuban plains, the Don Kuban Union finally capitulated, leaving us with the control of their country. We must now decide what to do with it." 
+annex.168.a:0 "Liberate a loyal Don Kuban Union"
+annex.168.b:0 "Give them to our Russian friend"
+annex.169.t:0 "Fate of Nepal"
+annex.169.d:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace in Katmandu. What shall we do?"
+annex.169.a:0 "Liberate Nepal in its entirety"
+annex.169.b:0 "Give the occupied territories to India and release the rest of Nepal"
+annex.169.c:0 "Give the occupied territories to the Bharatiyan Commune and release the rest of Nepal"
+annex.170.t:0 "Fate of Indochina"
+annex.170.d:0 "We are now in control of the wild regions of Indochina and we have to decide what to do with all of these different peoples."
+annex.170.a:0 "Liberate an united Indochina"
+annex.170.b:0 "Liberate Viet-Nam, Laos and Cambodia"
+annex.171.t:0 "Fate of Australasia"
+annex.171.d:0 "After a hard campaign throughout the isolated islands of the Australasian confederation our armies finally reached Camberra and with the capitulation of Australasia we must decide how we want to manage it."
+annex.171.a:0 "Liberate an united Australasian confederation"
+annex.171.b:0 "Liberate Australia and New Zealand"
+annex.172.t:0 "Fate of Spanish Morocco"
+annex.172.d:0 "We now control the Spanish parts of Morocco, should we give it to our moroccan puppet or keep it for ourselves?"
+annex.172.a:0 "Transfer it to our Moroccan puppet"
+annex.172.b:0 "Transfer it to our Spanish puppet"
+annex.173.t:0 "Fate of German Somaliland"
+annex.173.d:0 "We now control German Somaliland but we have a puppet close that might be better off handling the territory, should we give it to them?"
+annex.173.a:0 "Transfer it to our Somalian puppet"
+annex.173.b:0 "Transfer it to our Ethiopian puppet"
+annex.174.t:0 "Fate of German Aden"
+annex.174.d:0 "We now control Aden but we have a puppet close that might be better off handling the territory, should we give it to them?"
+annex.174.a:0 "Transfer it to our Yemeni puppet"
+annex.175.t:0 "Fate of Plock"
+annex.175.d:0 "We now control the disputed territory of Plock but we can't keep this isolated piece of land for ourselves, we need to choose who to give it to."
+annex.175.a:0 "Transfer it to Poland"
+annex.175.b:0 "Transfer it to the German Union"
+annex.175.c:0 "Transfer it to Prussia"
+annex.175.e:0 "Transfer it to the Commonwealth"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
