--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2142,6 +2142,37 @@ CNT_FAI_totalist:0 "CNT-FAI"
 CNT_FAI_totalist_ADJ:0 "Anarcho-Syndicalist"
 CNT_FAI_totalist_DEF:0 "CNT-FAI"
 
+AST_australia_totalist:0 "Australian Union"
+AST_australia_totalist_ADJ:0 "Australian"
+AST_australia_totalist_DEF:0 "The Australian Union"
+AST_australia_syndicalist:0 "Australian Union"
+AST_australia_syndicalist_ADJ:0 "Australian"
+AST_australia_syndicalist_DEF:0 "The Australian Union"
+AST_australia_radical_socialist:0 "Australian Union"
+AST_australia_radical_socialist_ADJ:0 "Australian"
+AST_australia_radical_socialist_DEF:0 "The Australian Union"
+AST_australia_social_democrat:0 "Australia"
+AST_australia_social_democrat_ADJ:0 "Australian"
+AST_australia_social_democrat_DEF:0 "Australia"
+AST_australia_social_liberal:0 "Australia"
+AST_australia_social_liberal_ADJ:0 "Australian"
+AST_australia_social_liberal_DEF:0 "Australia"
+AST_australia_market_liberal:0 "Australia"
+AST_australia_market_liberal_ADJ:0 "Australian"
+AST_australia_market_liberal_DEF:0 "Australia"
+AST_australia_social_conservative:0 "Australia"
+AST_australia_social_conservative_ADJ:0 "Australian"
+AST_australia_social_conservative_DEF:0 "Australia"
+AST_australia_authoritarian_democrat:0 "Australia"
+AST_australia_authoritarian_democrat_ADJ:0 "Australian"
+AST_australia_authoritarian_democrat_DEF:0 "Australia"
+AST_australia_paternal_autocrat:0 "Australia"
+AST_australia_paternal_autocrat_ADJ:0 "Australian"
+AST_australia_paternal_autocrat_DEF:0 "Australia"
+AST_australia_national_populist:0 "Australia"
+AST_australia_national_populist_ADJ:0 "Australian"
+AST_australia_national_populist_DEF:0 "Australia"
+
 ##############
 #Vanilla
 ##############
