--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -109,7 +109,7 @@ POL_pride_of_the_baltic:0 "Pride of the Baltic"
 POL_polish_marines:0 "Foreign Polish Expeditions"
 POL_naval_industry:0 "Naval Buildup in Gdansk"
 POL_gdansk_agreement:0 "The Poznan Agreement"
-POL_sieze_gdansk:0 "Seize Gdansk"
+POL_sieze_gdansk:0 "Crush Germany"
 POL_poland_forever:0 "Poland Forever"
 POL_beacon_of_polish_spirit:0 "Beacon of Polish Spirit"
 POL_not_yet_lost:0 "Not Yet Lost"
@@ -847,15 +847,15 @@ poland.111.t:0 "Ukraine Offers Peace"
 poland.111.d:0 "It is clear that we lost the war against the Ukraine and continuation of the fight will cause the fall of the Polish state. Ukraine proposes peace, but demands Eastern Galicia- should we agree to that?"
 poland.111.a:0 "We have to save Poland"
 poland.111.b:0 "Fight to the end!"
-poland.112.t:0 "Prussian Partition"
+poland.112.t:0 "The Prussian Partition"
 poland.112.d:0 "The Polish-Lithuanian Commonwealth lost much during the partitions of Poland in the late 18th century. Many provinces were ceded to the Kingdom of Prussia. Now Germany is at war and we are strong; should we press claims on our former lands?"
 poland.112.a:0 "Press claims on all our rightful lands!"
-poland.112.b:0 "Press claims on the Prussian partition and Silesia"
-poland.112.c:0 "We can't provoke Germans!"
-poland.113.t:0 "Germany is falling"
-poland.113.d:0 "The German armies are defeated, Berlin has no chance of winning. It is our chance to regain the Prussian partition."
+poland.112.b:0 "Press claims on the Prussian partition and Silesia."
+poland.112.c:0 "We can't provoke the Germans!"
+poland.113.t:0 "Germany is Falling"
+poland.113.d:0 "The German armies are defeated, Berlin has no chance of winning. It is our chance to regain our rightful lands and participate in this Prussian Partition."
 poland.113.a:0 "Attack!"
-poland.113.b:0 "Those claims were a mistake"
+poland.113.b:0 "Those claims were a mistake."
 poland.114.t:0 "German Empire in disarray"
 poland.114.d:0 "With the German Empire in turmoil, we have a great opportunity to seize parts of Silesia and entire Greater Poland. There is very little the German Empire government can do to stop us at this point."
 poland.114.a:0 "Seize Silesia and Greater Poland!"
@@ -1118,11 +1118,11 @@ poland.187.d:0 "Our demands for territory have been refused, even with our threa
 poland.187.a:0 "We'll back down...for now."
 poland.187.b:0 "Attack the Ruthenians!"
 poland.187.c:0 "Attack the Germans!"
-poland.188.t:0 "Our Claims to Germany"
-poland.188.d:0 "The German Empire currently occupies many territories that are rightfully ours, and we shall take it by force if need be!"
-poland.188.a:0 "Demand our territory be returned!"
-poland.188.b:0 "It is enough to declare them rightfully ours."
-poland.189.t:0 "Poland Demands Territory!"
+poland.188.t:0 "Operation: Tannenberg"
+poland.188.d:0 "Long have the Polish people suffered under the oppression of the German state! Long have the Polish people dreamed of a day that they may once again be a free and independent people! Long have the Polish people wished for all of their brethren to be united under a single banner! \n\n That day has come! The German Empire is weak and distracted, and now is the time for the Polish people to sieze what is theirs by right! Our forces have long prepared for this day, and only await the word to launch a surprise invasion of the German Empire and begin our campaign of revenge two centuries in the making."
+poland.188.a:0 "Send Germany our ultimatum."
+poland.188.b:0 "We must strike them down, now!"
+poland.189.t:0 "The Polish Ultimatum"
 poland.189.d:0 "Poland has sent us an ultimatum, return their territory or they will take it by force. Their ability to make good on these threats is uncertain, but we cannot simply ignore their threat."
 poland.189.a:0 "We're not in a position to refuse."
 poland.189.b:0 "Never!"
@@ -1206,6 +1206,9 @@ pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
 pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 POL_gminy_tooltip:0 "You will gain 5 Militia Divisions. \n"
 POL_polish_state:0 "You will abolish the monarchy and form the new Polish State."
+UKR_RUSCOUP:0 "Russain Coup in Ukraine"
+russ_gives_passports:0 "Russian-Ukranian Passports"
+POL_PRUSSIANPARTITION:0 "Laid Claim to the Prussian Partition"
 
 POL_totalist_party:0 "Free Worker's Party"
 POL_totalist_party_long:0 "The Free Worker's Party"
