added surrender event if SPR is only left in control of non-European states

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -313,6 +313,10 @@ delhi.24.t:0 "Bombay Is Ours"
 delhi.24.d:0 "As we suspected, the [PRF.GetAdjective] forces are too preoccupied to do much more than express outrage at our occupation of Bombay. By the time the war is done, the border will have been solidified."
 delhi.24.a:0 "A fait accompli!"
 
+delhi.25.t:0 "War with the British!"
+delhi.25.d:0 "Our war with the British Empire means it is time to cast aside any pretense of allegiance to the British king. We are, after all, no longer a dominion."
+delhi.25.a:0 "To the new republic!"
+
 delhi.100.t:0 "The Case of the Princely Armies"
 delhi.100.d:0 "Besides retaining informal sovereignty during the paramountcy of the British Raj, the Princely States also fielded their own private armies, ranging in size from mere regiments to several battalions of infantry, cavalry and artillery. Now, with our new government already having decided on the internal status the Princely remnants, the lingering question of what to do with their armies finally surfaces. Some argue that the Princes retain nominal control over the forces in question while at the same time expanding their ranks in order to keep them up to date with the regular state forces. Others believe it is time to bring the princely troops directly and unequivocally under the control of parliament as equal units to the standard army divisions. At the same time a minority of reactionary maharajas and feudal landowners advocate a maintaining of the status quo, although this approach is highly unpopular."
 delhi.100.a:0 "Assimilate the princely troops under parliament's control!"
