--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -449,6 +449,10 @@ sprc.123.d:0 "The Spanish Civil War is finally over, and it seems that [SPR.GetN
 sprc.123.a:0 "Hail to the king!"
 sprc.123.b:0 "I see..."
 
+sprc.124.t:0 "Spain is Lost!"
+sprc.124.d:0 "Continental Spain has been lost to us, and Madrid is occupied by foul [surrender_to.GetAdjective] forces. It is sadly time to lay down our arms..."
+sprc.124.a:0 "Alas..."
+
 ### Post-War ###
 
 ### CNT ###
