GER: Focus Tree Descriptions I

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -4,19 +4,17 @@
 GER_doctrine_new:0 "Military Reform"
 GER_doctrine_new_desc:0 "After the death of Hans von Seeckt and the retirement of August von Mackensen, the Chief of General Staff has been involved in constant debate over which methods the German Army should use as a tactical basis, or doctrine."
 GER_doctrine_great_war:0 "Squad Tactics"
-GER_doctrine_great_war_desc:0 "-"
+GER_doctrine_great_war_desc:0 "One thing that our intervention in the chaotic Chinese civil war has taught us is that infantryman cooperation on a face-to-face level can not be valued highly enough. But now that these so called Gruppentaktiken are taught to our soldiers, they lament inappropriate equipment..."
 GER_doctrine_great_war_2:0 "The modern Art of War"
-GER_doctrine_great_war_2_desc:0 "-"
+GER_doctrine_great_war_2_desc:0 "There is one book that every man who wants to become an officer in the army of the Reich must read - Clausewitz' 'The Art of War'. If we put our best military theorists on the subject, they can adapt the still applicable principles from the centuries-old book to the requirements of modern warfare."
 GER_doctrine_mobile:0 "Motorised Infiltration"
-GER_doctrine_mobile_desc:0 "-"
+GER_doctrine_mobile_desc:0 "While our military high command is divided on many subjects, they are united on one topic: They say that the possibilities that mass motorisation offers to infantry in warfare can to be exploited to win fast and decisive victories on an operational scale, harkening back to the victory of 1870/71."
 GER_doctrine_mobile_2:0 "A new Doctrine"
-GER_doctrine_mobile_2_desc:0 "-"
+GER_doctrine_mobile_2_desc:0 "Some of the more radical innovators - Heinz von Guderian and Erich von Manstein, with others - in our military high command are lobbying for research into a totally new doctrine. They want to focus on the fast movement of armored spearheads to break up solid fronts."
 GER_doctrine_mobile_3:0 "Invest in Panzer Factories"
 GER_doctrine_mobile_3_desc:0 "With a little directed investment, we could raise productivity of our armour factories by quite a lot. Some of our more conservative-minded generals will not approve of this investment, though."
-
 GER_mil_expansion_naval_1:0 "Finish 1934 Navy Plan"
 GER_mil_expansion_naval_1_desc:0 "The Kaiserliche Marine stands unchallenged in any sea on the planet. For now. The Union of Britain, The French, The Americans and the Japanese will all jealously try to outdo us. If left unchecked, our naval domination will end. We should continue the large navy modernisation project initiated back in 1934."
-
 GER_global1:0 "Supply lines to Singapore"
 GER_global1_desc:0 "-"
 GER_global2:0 "Expand Singapore Harbour"
@@ -110,58 +108,59 @@ GER_political_1_desc:0 "While it is undeniable the German empire is the greatest
 GER_black_monday_aftermath:0 "The Aftermath of Black Monday"
 GER_black_monday_aftermath_desc:0 "The great stock market crash of 1936, widely known as 'Black Monday', has already had a massive impact on German politics, culture, and society. While the damage might never be fixed, we should enact reforms and recovery policies to regain some of our lost capacity."
 GER_mil_industry_1:0 "PEkI I"
-GER_mil_industry_1_desc:0 "Programm für die Erweiterung kriegswichtiger Industrien"
+GER_mil_industry_1_desc:0 "Black Monday has hit the civilian industry horribly, and the military industry has been affected even worse. Our military supply specialists are clamoring for a program for the extension of war-relevant industries, or Programm für die Erweiterung kriegswichtiger Industrien, to ensure our military has bullets to fight."
 GER_mil_industry_2:0 "PEkI II"
-GER_mil_industry_2_desc:0 "-"
+GER_mil_industry_2_desc:0 "The Programm für die Erweiterung kriegswichtiger Industrien - or abbreviated PEkI, but who would want to abbreviate such a good, german word - is making progress. At least our arsenals don't have to open their last reserves whenever a unit wants to move out anymore. There's still some way to go, but at least we are on the right path."
 GER_mil_industry_3:0 "PEkI III"
-GER_mil_industry_3_desc:0 "-"
+GER_mil_industry_3_desc:0 "Well, what do you know? Turns out investing regularly and fostering confidence in contracts works better than our old system on switching providers on an annual basis. The third round of PEkI promises to be a resounding success."
 GER_civ_industry_1:0 "ZIP I"
-GER_civ_industry_1_desc:0 "Zivilindustrialisierungsplan I"
+GER_civ_industry_1_desc:0 "Our heavy industry is in shambles, with many workers out of a job after their former employers were forced to submit to the crisis. Some of our leading economy researchers have proposed a plan for civil industrilisation, the Zivilindustrialisierungsplan, to revitalise the civilian industrial sector."
 GER_civ_industry_2:0 "ZIP II"
-GER_civ_industry_2_desc:0 "-"
+GER_civ_industry_2_desc:0 "The first phase of the Zivilindustrialisierungsplan has shown promise, but there is more yet to come. At least some of the worst social and economic disaster has been alleviated, though."
 GER_civ_industry_3:0 "ZIP III"
 GER_civ_industry_3_desc:0 "With our civilian industry once again strong, but not yet booming, we are required to take just a few more steps. Soon enough German industry will tower above the rest of the world once more, as the steady influx of resources from the colonies assures a massive production boost."
 GER_industry_finished:0 "Economic boom"
-GER_industry_finished_desc:0 "-"
+GER_industry_finished_desc:0 "With our economic policies following the Black Monday a resounding success, private investors have picked up on the lead, and the economy has not only stabilised, but is currently experiencing a boom of sorts. It won't hold forever, but for the minute, we can concentrate on other issues."
 GER_economy:0 "The State of the Economy"
-GER_economy_desc:0 "It's good, really. The industry is humming along, the grain is coming in from the eastern member states of Mitteleuropa, many citizens have work. It's looking up for the Kaiserreich, and the golden age of Tirpitz seems endless..."
+GER_economy_desc:0 "It's good, really. The industry is humming along, the grain is coming in from the eastern member states of Mitteleuropa, many citizens have work. It's looking up for the Kaiserreich, and it seems like nothing will be able to stop the golden age of the late Reichskanzler Tirpitz..."
 GER_research_expansion:0 "Extra Research Funding"
-GER_research_expansion_desc:0 "Let us invest in science and technology to stimulate advances in both military and civilian affairs."
+GER_research_expansion_desc:0 "Investing in science and technology to stimulate advances in both military and civilian affairs. Isn't that an awfully good phrase? Doesn't really say anything, but it sure sounds good. Anyway, the laboratories are over there..."
 GER_ig_farben:0 "Invest In IG Farben"
 GER_ig_farben_desc:0 "We can invest in IG Farben, a pharmaceuticals company currently researching ways to synthesise various chemical compounds that might prove useful to our interests."
 GER_krupp:0 "Friedrich Krupp AG Monopoly"
 GER_krupp_desc: "The Krupp dynasty is an almost 400-year-old Dynasty of Industrious Germans, who has fed the German war machine ever since the Thirty Years' War! It is time we put them in state employment again, as their talents will be badly needed with a new Weltkrieg on the horizon."
 GER_artillery_research:0 "Artillery research"
-GER_artillery_research_desc:0 "-"
+GER_artillery_research_desc:0 "An area in which the German army has a long and standing tradition of lagging behind is the area of light support artillery. While the successes in building huge, unwieldy and impractical prestige objects such as the 'Paris Gun' can't be doubted, it's time to invest in some of the more practical - and more efficient - alternatives."
 GER_doctrine_armor:0 "Armoured breakthrough"
-GER_doctrine_armor_desc:0 "-"
+GER_doctrine_armor_desc:0 "Another crucial point of Guderians and Mansteins new doctrine is the so-called Schwerpunkt. They believe that Panzer technology has advanced to a point where amassed, mobile Panzer forces, with adequately equipped support troops, should be able to lead any offensive to victory. Now they need new Panzers to fit this idea."
 GER_hahn_meitner:0 "Support Hahn & Meitner"
 GER_hahn_meitner_desc:0 "Herr Hahn and Fräulein Meitner are both extremely talented physicists, Hahn discovered nuclear isomerism and Meitner is a department head at the Kaiser Wilhelm Institute! Together we believe the two can help create extremely powerful tools for society. And even more powerful weapons."
 GER_zuse:0 "Support Konrad Zuse"
 GER_zuse_desc:0 "Konrad Zuse has already handed in several patents for what he calls a 'computing devices'. With proper sponsorship, his mind could be put to good use by the state, for the state."
 GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
-GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
+GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields. If we officially endorse and promote the society as a place for state-sponsored research for state purposes, we should be able to attract some of the brightest minds of the new generation."
 GER_black_monday_radio:0 "The Kanzler and the Radio"
 GER_black_monday_radio_desc:0 "The crisis has shaken the Germans' belief in their country. Reichskanzler von Papen hopes to turn the tide with weekly radio addresses in which he will announce what steps the government has taken to combat the crisis."
 GER_groener1:0 "Liquidate unprofitable estates"
-GER_groener1_desc:0 "-"
+GER_groener1_desc:0 "The statesman Wilhelm Groener has recently published an essay titled 'The black zero: the need for austerity', in which he demands absolute balance discipline, even if it means losing some companies depending on subsidies. The essay has found a lot of adherents within the populace, as we have been forced to cut most funding for social agencies already anyway."
 GER_groener2:0 "Reichsarbeitsdienst"
+GER_groener2_desc:0 "The contacts and friends of Groener among military circles have now proposed a radical innovation: For the duration of the crisis, recruits will be able to choose to fulfill half a year of military service as manual laborers in state service instead. While bad for recruitment numbers, this will inject some needed labor into our economy."
 GER_groener3:0 "The Sale of Ceylon"
 GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investment every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
 GER_schacht1:0 "Bail out Junker Estates"
-GER_schacht1_desc:0 "-"
+GER_schacht1_desc:0 "The president of the Reichsbank, Hjalmar Schacht, demands to be given green light to go ahead with his economic program, dubbed the 'Schachtplan': According to him, we need to bail out the highly indebted Junker estates if we don't want to trigger an even further descent into chaos."
 GER_schacht2:0 "Investitionsprogramm"
-GER_schacht2_desc:0 "-"
+GER_schacht2_desc:0 "The next part of the Schachtplan would be a massive program aiming to encourage private investion, both into businesses as into consumer products. While this will be hard to achieve, it should enable producers to find a market for their products again, which will hopefully restart the economy."
 GER_schacht3:0 "Approach Poland"
-GER_schacht3_desc:0 "-"
+GER_schacht3_desc:0 "With the economy slowly finding its track again, the time has maybe come to finally include Poland into the customs-free zone formed by Mitteleuropa. There has been some enthusiasm about this proposal in some circles; Especially the Zentrum politican Heinrich von Brentano has been a leading proposer of the idea."
 GER_mitteleuropa:0 "One currency for Mitteleuropa"
-GER_mitteleuropa_desc:0 "-"
+GER_mitteleuropa_desc:0 "Now that Heinrich von Brentano and his friends of the European Friendship association have found their way into upper government circles, he has proposed another of his ideas: A common currency, shared by all Mitteleuropean countries. This would, of course, never work. European friendship? What a silly idea."
 GER_synthetic:0 "Research in Synthetics"
-GER_synthetic_desc:0 "-"
+GER_synthetic_desc:0 "The IG Farben researchers have, in cooperation with members ofthe Kaiser Wilhelm society, been able to make astounding breakthroughs on the area of synthetic production already. By giving them access to some more funds, we might be able to make their research ready for mass implementation."
 GER_experimental_research:0 "Experimental research"
-GER_experimental_research_desc:0 "-"
+GER_experimental_research_desc:0 "While we have already made good progress in some of the more traditional fields relevant to industry - engineering, chemistry, physics - some of our scientists want funding to conduct research into some more esoteric matters. Profit might not be as immediate as so far, but the potential is immense!"
 GER_black_monday_finish:0 "Finish Black Monday reforms"
-GER_black_monday_finish_desc:0 "-"
+GER_black_monday_finish_desc:0 "It seemed impossible, but the numbers confirm it; The crisis is nearing its end. Nearing its end, that is. There are still millions without jobs, and civil society has been stretched to its very end. The catastrophe of Black Monday will leave marks for a long time, but this is the beginning of the end."
 GER_pathfinders:0 "Organise the Youth"
 GER_pathfinders_desc:0 "Some experts have suggested that the best solution against the current lawlessness in our nations youth would be organising them so that they can learn new skills and use their energies for the public good. The Pfadfinder organisation would require increased spending for such an endeavour."
 GER_dcgb:0 "A Christian Trade Union"
@@ -169,13 +168,13 @@ GER_dcgb_desc:0 "By founding the Deutscher Christlicher Gewerkschaftsbund, we wi
 GER_jet:0 "Cult of Aviation"
 GER_jet_desc:0 "-"
 GER_linie1:0 "Reactivate the Ludendorfflinie"
-GER_linie1_desc:0 "-"
+GER_linie1_desc:0 "The Syndicalist menace looms darker than ever. In fear of going into the next war unprepared, the reactivation of the old Ludendorfflinie has been considered. Once one of the dictators many costly prestige projects, the line of bunkers and fortifications has fallen into disuse the last years - but that's nothing that can't be solved with a bit of engineering ingenuity!"
 GER_linie2_full:0 "Over the Meuse and far away"
-GER_linie2_full_desc:0 "-"
+GER_linie2_full_desc:0 "Our puppet regime in Brüssel is screaming for help against the Syndicalists. Extending the reactivation of the Ludendorfflinie over the Meuse river, up to the North Sea coast, would be costly and take lots of precious time - but it might enable us to make a stand somewhere that isn't Germany."
 GER_linie2_small:0 "Modernise only Bastenach"
-GER_linie2_small_desc:0 "-"
+GER_linie2_small_desc:0 "Our resources are stretched thin and time is of the essence. Even though Flanders-Wallonia may lie somewhat underdefended, we can't afford to waste time defending something that will be lost sooner or later anyway."
 GER_linie3:0 "Fortify the Rhineland"
-GER_linie3_desc:0 "-"
+GER_linie3_desc:0 "The Rhineland is the most heavily industrialised region in the entire world and vital to our economy, both in peace as in war. And yet, it lies only a few miles away from a border many have been eyeing nervously the last few weeks. In order to prepare against any eventualities, we should start extending the Ludendorflinie northwards."
 GER_schule:0 "Paderborner Luftkriegsschule"
 GER_schule_desc:0 "-"
 GER_institut:0 "Institut für Luftfahrttechnik"
@@ -214,11 +213,11 @@ GER_restore_country_rights_desc:0 "-"
 GER_babelsberg:0 "Expand Babelsberg"
 GER_babelsberg_desc:0 "-"
 GER_siemens:0 "Subsidies for Siemens"
-GER_siemens_desc:0 "-"
+GER_siemens_desc:0 "Siemens is one of the many middle-to-larger sized businesses that form the heart of hte German economy. By making contracts with them - and some other smaller industry companies - we could both prohibit a potentially damaging rise of influence of the already influential Krupp AG as well as boost competition within our contractors for railway and other infrastructure."
 GER_infra_1:0 "New Locomotives"
-GER_infra_1_desc:0 "-"
+GER_infra_1_desc:0 "German infrastructure is woefully out of date in places. Now that we have secured contracts with some of the leading businesses in the railway industry, we should get good terms for a general overhaul of the property of the Reichsbahn."
 GER_infra_2:0 "Rebuild railway tracks"
-GER_infra_2_desc:0 "-"
+GER_infra_2_desc:0 "The logical next step of our infrastructure overhaul would be a complete renewal of the most-used railway tracks, as well as a program to make even the most remote parts of the hinterland accessible per railway. This will, without doubt, have a positive impact on private economic development."
 
 ### Domestic Events ###
 
@@ -1070,8 +1069,8 @@ black_guarantee:0 "Guaranteed holdings of private individuals"
 GER_black_monday:0 "Black Monday"
 GER_black_monday1:0 "Schachtplan"
 GER_black_monday2:0 "Grönerplan"
-german_eco_finished:0 "Economic Boost"
-german_eco_finished:0 "Our economy has received new incentives, money has begun to flow. While it will not hold forever, for a time we should have something of a bonus on our hands."
+german_eco_finished:0 "Economic Boom"
+german_eco_finished_desc:0 "Our economy has received new incentives, money has begun to flow. While it will not hold forever, for a time we should have something of a bonus on our hands."
 GER_bunkrupt_fact:0 "An important industrial corporation declared bankruptcy"
 DCGB:0 "Deutscher-Christlicher Gewerkschaftsbund"
 GER_rhine_unrest:0 "Workers' Strike"
