fixed Mediterranean Bloc events

--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -42,10 +42,15 @@ CAR_army_innovation_focus:0 "Army Innovations"
 CAR_education_focus:0 "Centro de Estudios Universitarios"
 
 CAR_foreign_focus:0 "Renew the Mediterranean Bloc"
+CAR_foreign_focus_desc:0 "As our nation rises from the horrors of the Civil War, we are finding increased faith in the people, of both our government and our glorious armed forces. There has been serious talk amongst the military and national leaders of this country to use our strength to defend our interests across the Mediterranean."
 CAR_invite_italy:0 "Invite Italy"
+CAR_invite_italy_desc:0 "We have maintained diplomatic relations with the Italian Federation even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 CAR_invite_illyria:0 "Invite Illyria"
+CAR_invite_illyria_desc:0 "We have maintained positive diplomatic relations with Illyria even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 CAR_invite_portugal:0 "Invite Portugal"
+CAR_invite_portugal_desc:0 "We have maintained diplomatic relations with Portugal even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 CAR_invite_france:0 "Invite France"
+CAR_invite_france_desc:0 "We have maintained diplomatic relations with National France even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 CAR_french_restoration:0 "Bring France back to the Continent"
 
 ### Ideas ###
@@ -63,6 +68,7 @@ CAR_won_civil_war:0 "Won the civil war in Spain\n"
 CAR_remove_cores_SPR:0 "Remove all core states of [SPR.GetNameDef]\n"
 CAR_remove_cores_CAR:0 "Remove all core states of [CAR.GetNameDef]\n"
 CAR_remove_cores_CNT:0 "Remove all core states of [CNT.GetNameDef]\n"
+CAR_can_invite_faction:0 "There is a country who can be invited into a faction\n"
 
 ### Parties ###
 CAR_totalist_party:0 "POUM"
@@ -87,10 +93,6 @@ CAR_national_populist_party:0 "JONS"
 CAR_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
 
 ### Events ###
-carfor.410.t:0 "The Mediterranean Bloc: the Italian Federation"
-carfor.410.d:0 "We have maintained diplomatic relations with the Italian Federation even before Javier ascended to the throne. Now, we shall formally propose an alliance."
-carfor.410.a:0 "We await their response."
-
 carfor.411.t:0 "Invitation to the Mediterranean Bloc"
 carfor.411.d:0 "The Carlist Kingdom of Spain has proposed an alliance. Shall we agree?"
 carfor.411.a:0 "Yes."
@@ -103,10 +105,6 @@ carfor.412.a:0 "Splendid."
 carfor.413.t:0 "The Italian Federation refuses"
 carfor.413.d:0 "The Italian Federation has decided to not join our faction."
 carfor.413.a:0 "Fools."
-
-carfor.420.t:0 "The Mediterranean Bloc: Illyria"
-carfor.420.d:0 "We have maintained positive diplomatic relations with Illyria even before Javier ascended to the throne. Now, we shall formally propose an alliance."
-carfor.420.a:0 "We await their response."
 
 carfor.421.t:0 "Invitation to the Mediterranean Bloc"
 carfor.421.d:0 "After the end of the Spanish Civil War, Carlist Spain has proposed the creation of a Mediterranean Bloc, an economic and military alliance among the nations of the Mediterranean Sea. Should we join them?"
@@ -121,10 +119,6 @@ carfor.423.t:0 "Illyria refuses"
 carfor.423.d:0 "Illyria has decided to not join our faction."
 carfor.423.a:0 "Fools."
 
-carfor.430.t:0 "The Mediterranean Bloc: Portugal"
-carfor.430.d:0 "We have maintained diplomatic relations with Portugal even before Javier ascended to the throne. Now, we shall formally propose an alliance."
-carfor.430.a:0 "We await their response."
-
 carfor.431.t:0 "Invitation to the Mediterranean Bloc"
 carfor.431.d:0 "After the end of the Spanish Civil War, Carlist Spain has proposed the creation of a Mediterranean Bloc, an economic and military alliance among the nations of the Mediterranean Sea. Should we join them?"
 carfor.431.a:0 "We must join in their cause!"
@@ -138,10 +132,6 @@ carfor.433.t:0 "Portugal refuses"
 carfor.433.d:0 "Portugal has decided to not join our faction."
 carfor.433.a:0 "Fools."
 
-carfor.440.t:0 "The Mediterranean Bloc: National France"
-carfor.440.d:0 "We have maintained diplomatic relations with National France even before Javier ascended to the throne. Now, we shall formally propose an alliance."
-carfor.440.a:0 "We await their response."
-
 carfor.441.t:0 "Invitation to the Mediterranean Bloc"
 carfor.441.d:0 "After the end of the Spanish Civil War, Carlist Spain has proposed the creation of a Mediterranean Bloc, an economic and military alliance among the nations of the Mediterranean Sea. Should we join them?"
 carfor.441.a:0 "We must join in their cause!"
@@ -154,3 +144,7 @@ carfor.442.a:0 "Splendid."
 carfor.443.t:0 "National France refuses"
 carfor.443.d:0 "National France has decided to not join our faction."
 carfor.443.a:0 "Fools."
+
+carfor.450.t:0 "The Mediterranean Faction"
+carfor.450.d:0 "While we had intended to create an alliance in which a new power bloc could be set up within Europe, it appears our experiment is a failure."
+carfor.450.a:0 "Alas!"
