UoB: No trace of Christabel here either

--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -2,7 +2,7 @@
 
 ### Focuses ###
 ENG_tuc:0 "The 1936 Congress of the Trade Unions"
-ENG_tuc_desc:0 "This years' TUC will probably be a bit special - long-time Chairman Philip Snowden has indicated that he intends to resign. The decentralisationist Autonomists, led by Niclas y Glais, centralisationist Maximists (Oswald Mosley) and Status Quo Federationists (Arthur Horner) with his egalitarian & pacifist running mate Sylvia Pankhurst are all vying for superiority. These will be nights to remember..."
+ENG_tuc_desc:0 "This years' TUC will probably be a bit special - long-time Chairman Philip Snowden has indicated that he intends to resign. The decentralisationist Autonomists, led by Niclas y Glais, centralisationist Maximists (Oswald Mosley) and Status Quo Federationists (Arthur Horner) with his egalitarian & pacifist running mate Annie Kenney are all vying for superiority. These will be nights to remember..."
 ENG_tuc_economy:0 "Economic Policy"
 ENG_tuc_economy_desc:0 "On this day of the TUC congress, the debate has wandered into the area of economics. As has been predicted, every faction has put forward their own suggestions. Most people assume that the Maximists will win this debate, since Oswald Mosley is a major figure in the British economy these days."
 ENG_tuc_internal:0 "Internal Policy"
@@ -208,8 +208,8 @@ uob.8.t:0 "Chairman Election - Autonomists Secure a Majority"
 uob.8.d:0 "The TUC has decided to vote for Niclas y Glais' Autonomists with an overwhelming majority. Niclas y Glais will become the new Chairman of the TUC."
 uob.8.a:0 "Congratulations, Comrade Glais"
 uob.9.t:0 "Chairman Election - Feds & Cons Secure a Majority"
-uob.9.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Sylvia Pankhurst's Congregationists with an overwhelming majority. The two running mates will now have to decide who will become the new Chairman - or Chairwoman - of the TUC."
-uob.9.a:0 "Congratulations, Comrade Pankhurst"
+uob.9.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Annie Kenney's Congregationists with an overwhelming majority. The two running mates will now have to decide who will become the new Chairman - or Chairwoman - of the TUC."
+uob.9.a:0 "Congratulations, Comrade Kenney"
 uob.9.b:0 "Congratulations, Comrade Horner"
 uob.10.t:0 "Chairman Election - Maximists Secure no Majority"
 uob.10.d:0 "The TUC has decided to vote for Oswald Mosley's Maximists - but not with any great majority. Oswald Mosley will become the new Chairman of the TUC but he will have to compromise with other factions."
@@ -218,8 +218,8 @@ uob.11.t:0 "Chairman Election - Autonomists Secure no Majority"
 uob.11.d:0 "The TUC has decided to vote for Niclas y Glais' Autonomists - but not with any great majority. Niclas y Glais will become the new Chairman of the TUC but he will have to compromise with other factions."
 uob.11.a:0 "Congratulations, Comrade Glais"
 uob.12.t:0 "Chairman Election - Feds & Cons Secure no Majority"
-uob.12.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Sylvia Pankhurst's Congregationists - but not with any great majority. The two running mates will be able to decide who will become the new Chairman - or Chairwoman - but he - or she - will have to compromise with other factions."
-uob.12.a:0 "Congratulations, Comrade Pankhurst"
+uob.12.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Annie Kenney's Congregationists - but not with any great majority. The two running mates will be able to decide who will become the new Chairman - or Chairwoman - but he - or she - will have to compromise with other factions."
+uob.12.a:0 "Congratulations, Comrade Kenney"
 uob.12.b:0 "Congratulations, Comrade Horner"
 uob.13.t:0 "Chairman Election - Draw"
 uob.13.d:0 "The TUC has voted repeatedly during the last few days and the deadlock continues. What should be done?"
@@ -229,7 +229,7 @@ uob.14.t:0 "Chairman Election - The Next Round"
 uob.14.d:0 "Last year the election to the post of TUC chairman ended in a draw. Today the next round begins."
 uob.14.aa:0 "Erm... Congratulations, Comrade Mosley"
 uob.14.ab:0 "Congratulations, Comrade Glais"
-uob.14.ac:0 "Congratulations, Comrade Pankhurst"
+uob.14.ac:0 "Congratulations, Comrade Kenney"
 uob.14.ad:0 "Congratulations, Comrade Horner"
 uob.15.t:0 "Show of Force"
 uob.15.d:0 "With the newest aircraft carrier RNS Rebecca fully operational the Republican Navy was ready to reclaim her rightful position among the mightiest navies of the world. However the target of her first action was heavily disputed. Most officers opted for a full scale naval manoeuvre near Ireland or even further west wards - near the Azores or Iceland. But a naval manoeuvre of such large scale would surely draw attention of the much more powerful and heavily armed Hochseeflotte and even the smaller Canadian Royal navy might be forced to organise countermeasures. Most members of the Congress of Trade Unions opted for a small scale manoeuvre possibly without even leaving British territorial waters. Ultimately the Naval Commissar was inclined in favour for the Irish option."
@@ -766,9 +766,9 @@ uob.356.b:0 "Maximist liberals Eric Blair and Phil Piratin defeat Mosley!"
 uob.356.c:0 "Shock! Sylvia Pankhurst and Barbara Castle win a landslide!"
 uob.356.d:0 "Chairman-for-Life! Rule per decree!"
 uob.357.t:0 "Time for a change in leadership?"
-uob.357.d:0 "Comrade Pankhurst has shown mettle like that of Elizabeth I as she led us reluctantly through this war. Today, however, she looks tired and unlikely to win re-election. Perhaps she can, though, if she looks to more unconventional allies..."
+uob.357.d:0 "Comrade Kenney has shown mettle like that of Elizabeth I as she led us reluctantly through this war. Today, however, she looks tired and unlikely to win re-election. Perhaps she can, though, if she looks to more unconventional allies..."
 uob.357.a:0 "The Maximist Mosley and his protege Jack Jones win the top jobs."
-uob.357.b:0 "Pankhurst turns to Radical Socialist Clem Attlee for support!"
+uob.357.b:0 "Kenney turns to Radical Socialist Clem Attlee for support!"
 uob.357.c:0 "Barbara Castle challenges the Congregationalist consensus!"
 uob.357.d:0 "The military seizes control!"
 uob.358.t:0 "Time for a change in leadership?"
@@ -992,7 +992,7 @@ ENG_tuc_foreign_glais:0 "Autonomist Foreign Policy"
 ENG_tuc_foreign_fem:0 "Federationist Foreign Policy"
 ENG_tuc_foreign_mosley:0 "Maximist Foreign Policy"
 ENG_show_of_force_op:0 "Fleet Manoeuvres"
-kenney_chairman:0 "Sylvia Pankhurst is Chairman"
+kenney_chairman:0 "Annie Kenney is Chairman"
 PWH2:0 "The Second Peace with Honour has been signed"
 WK2W:0 "The Second Weltkrieg has been won"
 tuc2_eco:0 "Voted on Exchequer"
